--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ before_install:
         echo "Compiling Mozjpeg"
         git clone https://github.com/mozilla/mozjpeg.git $HOME/mozjpeg
         cd $HOME/mozjpeg
-        cmake -G"MSYS Makefiles" -DCMAKE_MAKE_PROGRAM="/c/ProgramData/chocolatey/bin/mingw32-make.exe" -DCMAKE_C_COMPILER='/c/ProgramData/chocolatey/bin/x86_64-w64-mingw32-gcc.exe' -DZLIB_LIBRARY="$HOME/zlib/libzlib.dll.a" -DZLIB_INCLUDE_DIR="$HOME/zlib" -DPNG_LIBRARY="$HOME/libpng/libpng16.a" -DPNG_PNG_INCLUDE_DIR="$HOME/libpng" -DCMAKE_AR="/c/ProgramData/chocolatey/bin/ar.exe" -DWITH_JPEG8=1 .
+        cmake -G"MSYS Makefiles" -DCMAKE_MAKE_PROGRAM="/c/ProgramData/chocolatey/bin/mingw32-make.exe" -DCMAKE_C_COMPILER='/c/ProgramData/chocolatey/bin/x86_64-w64-mingw32-gcc.exe' -DZLIB_LIBRARY="$HOME/zlib/libzlib.dll.a" -DZLIB_INCLUDE_DIR="$HOME/zlib" -DPNG_LIBRARY="$HOME/libpng/libpng16.a" -DPNG_PNG_INCLUDE_DIR="$HOME/libpng" -DCMAKE_AR="/c/ProgramData/chocolatey/bin/ar.exe" -DPNG_SUPPORTED=TRUE -DWITH_JPEG8=1 .
         /c/ProgramData/chocolatey/bin/mingw32-make.exe
         echo "Compiling Jpeg Archive"
         git clone https://github.com/danielgtaylor/jpeg-archive.git $HOME/jpeg-archive
