--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nhatdo-osc/jpeg-recompress-bin",
+  "name": "jpeg-recompress-bin",
   "version": "5.1.2",
   "description": "jpeg-recompress wrapper that makes it seamlessly available as a local dependency",
   "license": "MIT",
